Proyecto1Fase1/parser.output
Terminals unused in grammar

   comentario


Grammar

    0 $accept: PROGRAMA $end

    1 PROGRAMA: PROGRAMA OPCION
    2         | OPCION

    3 OPCION: CREAR
    4       | BORRAR
    5       | FORMATO
    6       | MONTAR
    7       | DESMONTAR
    8       | REPORTES

    9 CREAR: CREAR size igual entero
   10      | CREAR fit igual letra letra
   11      | CREAR unit igual letra
   12      | CREAR path igual TERMIDIRECC
   13      | mkdisk

   14 BORRAR: rmdisk path igual TERMIDIRECC

   15 TERMIDIRECC: direccion
   16            | cadena

   17 FORMATO: FORMATO size igual entero
   18        | FORMATO fit igual letra letra
   19        | FORMATO unit igual letra
   20        | FORMATO path igual TERMIDIRECC
   21        | FORMATO typep igual letra
   22        | FORMATO deletep igual identificador
   23        | FORMATO name igual TERMIIDENTI
   24        | FORMATO add igual entero
   25        | fdisk

   26 TERMIIDENTI: identificador
   27            | cadena

   28 MONTAR: MONTAR path igual TERMIDIRECC
   29       | MONTAR name igual TERMIIDENTI
   30       | mount

   31 DESMONTAR: unmount id igual identificador

   32 REPORTES: REPORTES id igual identificador
   33         | REPORTES path igual TERMIDIRECC
   34         | REPORTES name igual identificador
   35         | rep


Terminals, with rules where they appear

$end (0) 0
error (256)
entero (258) 9 17 24
cadena (259) 16 27
identificador (260) 22 26 31 32 34
letra (261) 10 11 18 19 21
comentario (262)
direccion (263) 15
igual (264) 9 10 11 12 14 17 18 19 20 21 22 23 24 28 29 31 32 33 34
mkdisk (265) 13
rmdisk (266) 14
fdisk (267) 25
mount (268) 30
unmount (269) 31
rep (270) 35
size (271) 9 17
fit (272) 10 18
unit (273) 11 19
path (274) 12 14 20 28 33
typep (275) 21
deletep (276) 22
name (277) 23 29 34
add (278) 24
id (279) 31 32


Nonterminals, with rules where they appear

$accept (25)
    on left: 0
PROGRAMA (26)
    on left: 1 2, on right: 0 1
OPCION (27)
    on left: 3 4 5 6 7 8, on right: 1 2
CREAR (28)
    on left: 9 10 11 12 13, on right: 3 9 10 11 12
BORRAR (29)
    on left: 14, on right: 4
TERMIDIRECC (30)
    on left: 15 16, on right: 12 14 20 28 33
FORMATO (31)
    on left: 17 18 19 20 21 22 23 24 25, on right: 5 17 18 19 20 21
    22 23 24
TERMIIDENTI (32)
    on left: 26 27, on right: 23 29
MONTAR (33)
    on left: 28 29 30, on right: 6 28 29
DESMONTAR (34)
    on left: 31, on right: 7
REPORTES (35)
    on left: 32 33 34 35, on right: 8 32 33 34


State 0

    0 $accept: . PROGRAMA $end

    mkdisk   shift, and go to state 1
    rmdisk   shift, and go to state 2
    fdisk    shift, and go to state 3
    mount    shift, and go to state 4
    unmount  shift, and go to state 5
    rep      shift, and go to state 6

    PROGRAMA   go to state 7
    OPCION     go to state 8
    CREAR      go to state 9
    BORRAR     go to state 10
    FORMATO    go to state 11
    MONTAR     go to state 12
    DESMONTAR  go to state 13
    REPORTES   go to state 14


State 1

   13 CREAR: mkdisk .

    $default  reduce using rule 13 (CREAR)


State 2

   14 BORRAR: rmdisk . path igual TERMIDIRECC

    path  shift, and go to state 15


State 3

   25 FORMATO: fdisk .

    $default  reduce using rule 25 (FORMATO)


State 4

   30 MONTAR: mount .

    $default  reduce using rule 30 (MONTAR)


State 5

   31 DESMONTAR: unmount . id igual identificador

    id  shift, and go to state 16


State 6

   35 REPORTES: rep .

    $default  reduce using rule 35 (REPORTES)


State 7

    0 $accept: PROGRAMA . $end
    1 PROGRAMA: PROGRAMA . OPCION

    $end     shift, and go to state 17
    mkdisk   shift, and go to state 1
    rmdisk   shift, and go to state 2
    fdisk    shift, and go to state 3
    mount    shift, and go to state 4
    unmount  shift, and go to state 5
    rep      shift, and go to state 6

    OPCION     go to state 18
    CREAR      go to state 9
    BORRAR     go to state 10
    FORMATO    go to state 11
    MONTAR     go to state 12
    DESMONTAR  go to state 13
    REPORTES   go to state 14


State 8

    2 PROGRAMA: OPCION .

    $default  reduce using rule 2 (PROGRAMA)


State 9

    3 OPCION: CREAR .
    9 CREAR: CREAR . size igual entero
   10      | CREAR . fit igual letra letra
   11      | CREAR . unit igual letra
   12      | CREAR . path igual TERMIDIRECC

    size  shift, and go to state 19
    fit   shift, and go to state 20
    unit  shift, and go to state 21
    path  shift, and go to state 22

    $default  reduce using rule 3 (OPCION)


State 10

    4 OPCION: BORRAR .

    $default  reduce using rule 4 (OPCION)


State 11

    5 OPCION: FORMATO .
   17 FORMATO: FORMATO . size igual entero
   18        | FORMATO . fit igual letra letra
   19        | FORMATO . unit igual letra
   20        | FORMATO . path igual TERMIDIRECC
   21        | FORMATO . typep igual letra
   22        | FORMATO . deletep igual identificador
   23        | FORMATO . name igual TERMIIDENTI
   24        | FORMATO . add igual entero

    size     shift, and go to state 23
    fit      shift, and go to state 24
    unit     shift, and go to state 25
    path     shift, and go to state 26
    typep    shift, and go to state 27
    deletep  shift, and go to state 28
    name     shift, and go to state 29
    add      shift, and go to state 30

    $default  reduce using rule 5 (OPCION)


State 12

    6 OPCION: MONTAR .
   28 MONTAR: MONTAR . path igual TERMIDIRECC
   29       | MONTAR . name igual TERMIIDENTI

    path  shift, and go to state 31
    name  shift, and go to state 32

    $default  reduce using rule 6 (OPCION)


State 13

    7 OPCION: DESMONTAR .

    $default  reduce using rule 7 (OPCION)


State 14

    8 OPCION: REPORTES .
   32 REPORTES: REPORTES . id igual identificador
   33         | REPORTES . path igual TERMIDIRECC
   34         | REPORTES . name igual identificador

    path  shift, and go to state 33
    name  shift, and go to state 34
    id    shift, and go to state 35

    $default  reduce using rule 8 (OPCION)


State 15

   14 BORRAR: rmdisk path . igual TERMIDIRECC

    igual  shift, and go to state 36


State 16

   31 DESMONTAR: unmount id . igual identificador

    igual  shift, and go to state 37


State 17

    0 $accept: PROGRAMA $end .

    $default  accept


State 18

    1 PROGRAMA: PROGRAMA OPCION .

    $default  reduce using rule 1 (PROGRAMA)


State 19

    9 CREAR: CREAR size . igual entero

    igual  shift, and go to state 38


State 20

   10 CREAR: CREAR fit . igual letra letra

    igual  shift, and go to state 39


State 21

   11 CREAR: CREAR unit . igual letra

    igual  shift, and go to state 40


State 22

   12 CREAR: CREAR path . igual TERMIDIRECC

    igual  shift, and go to state 41


State 23

   17 FORMATO: FORMATO size . igual entero

    igual  shift, and go to state 42


State 24

   18 FORMATO: FORMATO fit . igual letra letra

    igual  shift, and go to state 43


State 25

   19 FORMATO: FORMATO unit . igual letra

    igual  shift, and go to state 44


State 26

   20 FORMATO: FORMATO path . igual TERMIDIRECC

    igual  shift, and go to state 45


State 27

   21 FORMATO: FORMATO typep . igual letra

    igual  shift, and go to state 46


State 28

   22 FORMATO: FORMATO deletep . igual identificador

    igual  shift, and go to state 47


State 29

   23 FORMATO: FORMATO name . igual TERMIIDENTI

    igual  shift, and go to state 48


State 30

   24 FORMATO: FORMATO add . igual entero

    igual  shift, and go to state 49


State 31

   28 MONTAR: MONTAR path . igual TERMIDIRECC

    igual  shift, and go to state 50


State 32

   29 MONTAR: MONTAR name . igual TERMIIDENTI

    igual  shift, and go to state 51


State 33

   33 REPORTES: REPORTES path . igual TERMIDIRECC

    igual  shift, and go to state 52


State 34

   34 REPORTES: REPORTES name . igual identificador

    igual  shift, and go to state 53


State 35

   32 REPORTES: REPORTES id . igual identificador

    igual  shift, and go to state 54


State 36

   14 BORRAR: rmdisk path igual . TERMIDIRECC

    cadena     shift, and go to state 55
    direccion  shift, and go to state 56

    TERMIDIRECC  go to state 57


State 37

   31 DESMONTAR: unmount id igual . identificador

    identificador  shift, and go to state 58


State 38

    9 CREAR: CREAR size igual . entero

    entero  shift, and go to state 59


State 39

   10 CREAR: CREAR fit igual . letra letra

    letra  shift, and go to state 60


State 40

   11 CREAR: CREAR unit igual . letra

    letra  shift, and go to state 61


State 41

   12 CREAR: CREAR path igual . TERMIDIRECC

    cadena     shift, and go to state 55
    direccion  shift, and go to state 56

    TERMIDIRECC  go to state 62


State 42

   17 FORMATO: FORMATO size igual . entero

    entero  shift, and go to state 63


State 43

   18 FORMATO: FORMATO fit igual . letra letra

    letra  shift, and go to state 64


State 44

   19 FORMATO: FORMATO unit igual . letra

    letra  shift, and go to state 65


State 45

   20 FORMATO: FORMATO path igual . TERMIDIRECC

    cadena     shift, and go to state 55
    direccion  shift, and go to state 56

    TERMIDIRECC  go to state 66


State 46

   21 FORMATO: FORMATO typep igual . letra

    letra  shift, and go to state 67


State 47

   22 FORMATO: FORMATO deletep igual . identificador

    identificador  shift, and go to state 68


State 48

   23 FORMATO: FORMATO name igual . TERMIIDENTI

    cadena         shift, and go to state 69
    identificador  shift, and go to state 70

    TERMIIDENTI  go to state 71


State 49

   24 FORMATO: FORMATO add igual . entero

    entero  shift, and go to state 72


State 50

   28 MONTAR: MONTAR path igual . TERMIDIRECC

    cadena     shift, and go to state 55
    direccion  shift, and go to state 56

    TERMIDIRECC  go to state 73


State 51

   29 MONTAR: MONTAR name igual . TERMIIDENTI

    cadena         shift, and go to state 69
    identificador  shift, and go to state 70

    TERMIIDENTI  go to state 74


State 52

   33 REPORTES: REPORTES path igual . TERMIDIRECC

    cadena     shift, and go to state 55
    direccion  shift, and go to state 56

    TERMIDIRECC  go to state 75


State 53

   34 REPORTES: REPORTES name igual . identificador

    identificador  shift, and go to state 76


State 54

   32 REPORTES: REPORTES id igual . identificador

    identificador  shift, and go to state 77


State 55

   16 TERMIDIRECC: cadena .

    $default  reduce using rule 16 (TERMIDIRECC)


State 56

   15 TERMIDIRECC: direccion .

    $default  reduce using rule 15 (TERMIDIRECC)


State 57

   14 BORRAR: rmdisk path igual TERMIDIRECC .

    $default  reduce using rule 14 (BORRAR)


State 58

   31 DESMONTAR: unmount id igual identificador .

    $default  reduce using rule 31 (DESMONTAR)


State 59

    9 CREAR: CREAR size igual entero .

    $default  reduce using rule 9 (CREAR)


State 60

   10 CREAR: CREAR fit igual letra . letra

    letra  shift, and go to state 78


State 61

   11 CREAR: CREAR unit igual letra .

    $default  reduce using rule 11 (CREAR)


State 62

   12 CREAR: CREAR path igual TERMIDIRECC .

    $default  reduce using rule 12 (CREAR)


State 63

   17 FORMATO: FORMATO size igual entero .

    $default  reduce using rule 17 (FORMATO)


State 64

   18 FORMATO: FORMATO fit igual letra . letra

    letra  shift, and go to state 79


State 65

   19 FORMATO: FORMATO unit igual letra .

    $default  reduce using rule 19 (FORMATO)


State 66

   20 FORMATO: FORMATO path igual TERMIDIRECC .

    $default  reduce using rule 20 (FORMATO)


State 67

   21 FORMATO: FORMATO typep igual letra .

    $default  reduce using rule 21 (FORMATO)


State 68

   22 FORMATO: FORMATO deletep igual identificador .

    $default  reduce using rule 22 (FORMATO)


State 69

   27 TERMIIDENTI: cadena .

    $default  reduce using rule 27 (TERMIIDENTI)


State 70

   26 TERMIIDENTI: identificador .

    $default  reduce using rule 26 (TERMIIDENTI)


State 71

   23 FORMATO: FORMATO name igual TERMIIDENTI .

    $default  reduce using rule 23 (FORMATO)


State 72

   24 FORMATO: FORMATO add igual entero .

    $default  reduce using rule 24 (FORMATO)


State 73

   28 MONTAR: MONTAR path igual TERMIDIRECC .

    $default  reduce using rule 28 (MONTAR)


State 74

   29 MONTAR: MONTAR name igual TERMIIDENTI .

    $default  reduce using rule 29 (MONTAR)


State 75

   33 REPORTES: REPORTES path igual TERMIDIRECC .

    $default  reduce using rule 33 (REPORTES)


State 76

   34 REPORTES: REPORTES name igual identificador .

    $default  reduce using rule 34 (REPORTES)


State 77

   32 REPORTES: REPORTES id igual identificador .

    $default  reduce using rule 32 (REPORTES)


State 78

   10 CREAR: CREAR fit igual letra letra .

    $default  reduce using rule 10 (CREAR)


State 79

   18 FORMATO: FORMATO fit igual letra letra .

    $default  reduce using rule 18 (FORMATO)
